changes for validation